@@ -1,6 +1,7 @@
 2019-11-04    <alexander.nelson@nist.gov>
 
 	* Python: Relax schema presence check for local pytest builds
+	* objects.py: Add and test filesize of diskimageobject element
 
 2019-11-01    <alexander.nelson@nist.gov>
 
